[package]
name = "machine_learning_with_rust"
version = "0.1.0"
authors = ["Nackan <59600727+RyosukeNAKATA@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tensorflow = { version = "0.16.0", features = ["tensorflow_unstable"] }
random = "0.12.2"
