[tool.poetry]
name = "machine_learning_with_rust"
version = "0.1.0"
description = ""
authors = ["Nackan <59600727+RyosukeNAKATA@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "^2.4.1"
matplotlib = "^3.4.0"
gym = "^0.18.0"
pylint = "^2.7.2"
pep8 = "^1.7.1"
flake8 = "^3.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
